Fix bug with decks wrapping on smaller screen

--- a/client/src/views/game.scss
+++ b/client/src/views/game.scss
@@ -63,7 +63,7 @@
 	align-content: center;
 	align-items: center;
 	display: flex;
-	flex-flow: row wrap;
+	flex-flow: row nowrap;
 	justify-content: center;
 	padding: 1rem;
 }
